k8s/event-storage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-storage-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: event-storage
  template:
    metadata:
      labels:
        component: event-storage
    spec:
      containers:
        - name: event-storage-service-container
          image: alehvilchynski/event-storage-service-boot
          ports:
            - containerPort: 8400
            - containerPort: 5005
