k8s/auth-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 8100
      targetPort: 8100
