k8s/auth-service-node-port.yaml
#Only for debug:
apiVersion: v1
kind: Service
metadata:
  name: auth-service-node-port
spec:
  type: NodePort
  ports:
    - port: 5015
      targetPort: 5005
      nodePort: 31515
  selector:
    component: auth
