k8s/event-storage-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-storage-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: event-storage
  ports:
    - port: 8400
      targetPort: 8400
