k8s/order-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: order
  ports:
    - port: 8300
      targetPort: 8300
