k8s/profile-service-node-port.yaml
#Only for debug:
apiVersion: v1
kind: Service
metadata:
  name: profile-service-node-port
spec:
  type: NodePort
  ports:
    - port: 5025
      targetPort: 5005
      nodePort: 31525
  selector:
    component: profile
