k8s/zookeeper-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
